--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,7 +46,7 @@
 
     @include desktop {
         grid-template-columns: repeat(4, 1fr);
-        gap: 2rem;
+        gap: 1.25rem;
     }
 
     @include wide {
